--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -13,4 +13,37 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding> </ion-content>
+<ion-content padding>
+  <ion-card>
+    <ion-card-content>
+      <ion-card-title>
+        Our History
+      </ion-card-title>
+      <p>
+        Started in 2010, Ristorante con Fusion quickly established itself as a
+        culinary icon par excellence in Hong Kong. With its unique brand of
+        world fusion cuisine that can be found nowhere else, it enjoys patronage
+        from the A-list clientele in Hong Kong. Featuring four of the best
+        three-star Michelin chefs in the world, you never know what will arrive
+        on your plate the next time you visit us. The restaurant traces its
+        humble beginnings to The Frying Pan, a successful chain started by our
+        CEO, Mr. Peter Pan, that featured for the first time the world's best
+        cuisines in a pan.
+      </p>
+    </ion-card-content>
+    <ion-row> </ion-row>
+  </ion-card>
+
+  <ion-list *ngIf="dish">
+    <ion-list-header>
+      Comments
+    </ion-list-header>
+    <ion-item *ngFor="let comment of dish.comments" text-wrap>
+      <h4>{{comment.comment}}</h4>
+      <p>{{comment.rating}} Stars</p>
+      <p>
+        <span> -- {{comment.author}} {{comment.date | date }} </span>
+      </p>
+    </ion-item>
+  </ion-list>
+</ion-content>
