--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -16,7 +16,7 @@
 <ion-content padding>
   <ion-card>
     <ion-card-content>
-      <ion-card-title>
+      <ion-card-title color="primary">
         Location Information
       </ion-card-title>
       <p>121, Clear Water Bay Road</p>
