--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>Dish Details</ion-title>
+    <ion-buttons end
+      ><button ion-button icon-only (click)="presentActionSheet()">
+        <ion-icon name="more" class="more"></ion-icon></button
+    ></ion-buttons>
   </ion-navbar>
 </ion-header>
 
