--- a/src/pages/comment/comment.html
+++ b/src/pages/comment/comment.html
@@ -19,30 +19,23 @@
 <ion-content padding>
   <form [formGroup]="commentEntry" (ngSubmit)="onSubmit()">
     <ion-item>
-      <ion-label>Rating</ion-label>
-      <ion-select formControlName="rating">
-        <ion-option value="1">1</ion-option>
-        <ion-option value="2">2</ion-option>
-        <ion-option value="3">3</ion-option>
-        <ion-option value="4">4</ion-option>
-        <ion-option value="5">5</ion-option>
-        <ion-option value="6">6</ion-option>
-      </ion-select>
+      <ion-label position="floating">Your Name</ion-label>
+      <ion-input formControlName="author"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Author</ion-label>
-      <ion-toggle formControlName="author" checked="true"></ion-toggle>
+      <ion-label>Your Rating</ion-label>
+      <ion-range min="1" max="5" step="1" snaps="true">
+        <ion-icon size="small" slot="start" name="sad"></ion-icon>
+        <ion-icon slot="end" name="happy"></ion-icon>
+      </ion-range>
     </ion-item>
+
     <ion-item>
-      <ion-label>Comment</ion-label>
-      <ion-datetime
-        displayFormat="MMM DD, YYYY hh:mm A"
-        pickerFormat="MMM DD, YYYY hh:mm A"
-        formControlName="comment"
-      ></ion-datetime>
+      <ion-label position="stacked">Your Comment</ion-label>
+      <ion-textarea formControlName="comment"></ion-textarea>
     </ion-item>
     <button ion-button type="submit" [disabled]="!commentEntry.valid">
-      Reserve
+      Submit
     </button>
   </form>
 </ion-content>
